@@ -2,10 +2,10 @@ package com.feywild.feywild.jei;
 
 import com.feywild.feywild.FeywildMod;
 import com.feywild.feywild.block.ModBlocks;
-import com.feywild.feywild.jei.util.FeywildJeiReloader;
 import com.feywild.feywild.recipes.AltarRecipe;
 import com.feywild.feywild.recipes.DwarvenAnvilRecipe;
 import com.feywild.feywild.recipes.ModRecipeTypes;
+import com.feywild.feywild.trade.recipe.TradeRecipe;
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
 import mezz.jei.api.registration.IRecipeCatalystRegistration;
@@ -18,12 +18,14 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeManager;
 
 import javax.annotation.Nonnull;
+import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 @JeiPlugin
 public class FeywildJei implements IModPlugin {
+
+    public static List<TradeRecipe> clientDwarfTrades = List.of();
 
     private static IJeiRuntime runtime;
 
@@ -44,16 +46,24 @@ public class FeywildJei implements IModPlugin {
 
     @Override
     public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
-        registration.addRecipeCatalyst(new ItemStack(ModBlocks.feyAltar), AltarRecipeCategory.UID);
-        registration.addRecipeCatalyst(new ItemStack(ModBlocks.dwarvenAnvil), DwarvenAnvilRecipeCategory.UID);
+        registration.addRecipeCatalyst(new ItemStack(ModBlocks.feyAltar), AltarRecipeCategory.TYPE);
+        registration.addRecipeCatalyst(new ItemStack(ModBlocks.dwarvenAnvil), DwarvenAnvilRecipeCategory.TYPE);
     }
 
     @Override
     public void registerRecipes(@Nonnull IRecipeRegistration registration) {
         RecipeManager rm = Objects.requireNonNull(Minecraft.getInstance().level).getRecipeManager();
-        registration.addRecipes(rm.getAllRecipesFor(ModRecipeTypes.ALTAR).stream().filter(r -> r instanceof AltarRecipe).collect(Collectors.toList()), AltarRecipeCategory.UID);
-        registration.addRecipes(rm.getAllRecipesFor(ModRecipeTypes.DWARVEN_ANVIL).stream().filter(r -> r instanceof DwarvenAnvilRecipe).collect(Collectors.toList()), DwarvenAnvilRecipeCategory.UID);
-        registration.addRecipes(FeywildJeiReloader.clientTrades, TradeRecipeCategory.UID);
+        registration.addRecipes(AltarRecipeCategory.TYPE, rm.getAllRecipesFor(ModRecipeTypes.altar).stream()
+                .filter(r -> r instanceof AltarRecipe)
+                .map(r -> (AltarRecipe) r)
+                .toList()
+        );
+        registration.addRecipes(DwarvenAnvilRecipeCategory.TYPE, rm.getAllRecipesFor(ModRecipeTypes.dwarvenAnvil).stream()
+                .filter(r -> r instanceof DwarvenAnvilRecipe)
+                .map(r -> (DwarvenAnvilRecipe) r)
+                .toList()
+        );
+        registration.addRecipes(TradeRecipeCategory.TYPE, clientDwarfTrades);
     }
 
     @Override
